Updated after adding more tests

--- a/src/saltproc.app.html
+++ b/src/saltproc.app.html
@@ -188,11 +188,13 @@ from <cite>*.dot</cite> file.</p>
 <dd class="field-odd"><p><strong>dot_file</strong> (<em>str</em>) – Path to <cite>.dot</cite> file with reprocessing system structure.</p>
 </dd>
 <dt class="field-even">Returns</dt>
-<dd class="field-even"><p><strong>mat_name</strong> – Name of burnable material which reprocessing scheme described in <cite>.dot</cite>
-file.</p>
-</dd>
-<dt class="field-odd">Return type</dt>
-<dd class="field-odd"><p>str</p>
+<dd class="field-even"><p><ul class="simple">
+<li><p><strong>mat_name</strong> (<em>str</em>) – Name of burnable material which reprocessing scheme described in <cite>.dot</cite>
+file.</p></li>
+<li><p><strong>paths_list</strong> (<em>list</em>) – List of lists containing all possible paths between <cite>core_outlet</cite> and
+<cite>core_inlet</cite>.</p></li>
+</ul>
+</p>
 </dd>
 </dl>
 </dd></dl>
