--- a/src/saltproc.simulation.html
+++ b/src/saltproc.simulation.html
@@ -242,7 +242,7 @@ mass_flowrate, void_fraction, at the current depletion step to it.</p>
 <dl class="field-list simple">
 <dt class="field-odd">Parameters</dt>
 <dd class="field-odd"><ul class="simple">
-<li><p><strong>mats</strong> (<em>dict</em>) – <p>Dictionaty that contains <cite>Materialflow</cite> objects.</p>
+<li><p><strong>mats</strong> (<em>dict</em>) – <p>Dictionary that contains <cite>Materialflow</cite> objects.</p>
 <dl class="simple">
 <dt><code class="docutils literal notranslate"><span class="pre">key</span></code></dt><dd><p>Name of burnable material.</p>
 </dd>
