--- a/genindex.html
+++ b/genindex.html
@@ -478,9 +478,15 @@
 </li>
       <li><a href="src/saltproc.tests.html#module-saltproc.tests">saltproc.tests (module)</a>
 </li>
+      <li><a href="src/saltproc.tests.test_app.html#module-saltproc.tests.test_app">saltproc.tests.test_app (module)</a>
+</li>
       <li><a href="src/saltproc.tests.test_depcode.html#module-saltproc.tests.test_depcode">saltproc.tests.test_depcode (module)</a>
 </li>
+      <li><a href="src/saltproc.tests.test_materialflow.html#module-saltproc.tests.test_materialflow">saltproc.tests.test_materialflow (module)</a>
+</li>
       <li><a href="src/saltproc.tests.test_process.html#module-saltproc.tests.test_process">saltproc.tests.test_process (module)</a>
+</li>
+      <li><a href="src/saltproc.tests.test_simulation.html#module-saltproc.tests.test_simulation">saltproc.tests.test_simulation (module)</a>
 </li>
       <li><a href="src/saltproc.version.html#module-saltproc.version">saltproc.version (module)</a>
 </li>
@@ -490,12 +496,12 @@
 </li>
       <li><a href="src/saltproc.materialflow.html#saltproc.materialflow.Materialflow.set_range">set_range() (saltproc.materialflow.Materialflow method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="src/saltproc.materialflow.html#saltproc.materialflow.Materialflow.setdefault">setdefault() (saltproc.materialflow.Materialflow method)</a>
 </li>
       <li><a href="src/saltproc.simulation.html#saltproc.simulation.Simulation">Simulation (class in saltproc.simulation)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="src/saltproc.depcode.html#saltproc.depcode.Depcode.sss_meta_zzz">sss_meta_zzz() (saltproc.depcode.Depcode method)</a>
 </li>
       <li><a href="src/saltproc.simulation.html#saltproc.simulation.Simulation.store_after_repr">store_after_repr() (saltproc.simulation.Simulation method)</a>
@@ -536,7 +542,11 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="src/saltproc.tests.test_depcode.html#saltproc.tests.test_depcode.test_change_sim_par">test_change_sim_par() (in module saltproc.tests.test_depcode)</a>
 </li>
-      <li><a href="src/saltproc.tests.test_process.html#saltproc.tests.test_process.test_element_removal">test_element_removal() (in module saltproc.tests.test_process)</a>
+      <li><a href="src/saltproc.tests.test_materialflow.html#saltproc.tests.test_materialflow.test_copy_pymat_attrs">test_copy_pymat_attrs() (in module saltproc.tests.test_materialflow)</a>
+</li>
+      <li><a href="src/saltproc.tests.test_depcode.html#saltproc.tests.test_depcode.test_create_iter_matfile">test_create_iter_matfile() (in module saltproc.tests.test_depcode)</a>
+</li>
+      <li><a href="src/saltproc.tests.test_materialflow.html#saltproc.tests.test_materialflow.test_get_mass">test_get_mass() (in module saltproc.tests.test_materialflow)</a>
 </li>
       <li><a href="src/saltproc.tests.test_depcode.html#saltproc.tests.test_depcode.test_get_nuc_name">test_get_nuc_name() (in module saltproc.tests.test_depcode)</a>
 </li>
@@ -546,15 +556,39 @@
 </li>
       <li><a href="src/saltproc.tests.test_depcode.html#saltproc.tests.test_depcode.test_read_dep_comp">test_read_dep_comp() (in module saltproc.tests.test_depcode)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="src/saltproc.tests.test_depcode.html#saltproc.tests.test_depcode.test_read_depcode_info">test_read_depcode_info() (in module saltproc.tests.test_depcode)</a>
 </li>
       <li><a href="src/saltproc.tests.test_depcode.html#saltproc.tests.test_depcode.test_read_depcode_step_param">test_read_depcode_step_param() (in module saltproc.tests.test_depcode)</a>
 </li>
       <li><a href="src/saltproc.tests.test_depcode.html#saltproc.tests.test_depcode.test_read_depcode_template">test_read_depcode_template() (in module saltproc.tests.test_depcode)</a>
 </li>
+      <li><a href="src/saltproc.tests.test_app.html#saltproc.tests.test_app.test_read_dot">test_read_dot() (in module saltproc.tests.test_app)</a>
+</li>
+      <li><a href="src/saltproc.tests.test_app.html#saltproc.tests.test_app.test_read_feeds_from_input">test_read_feeds_from_input() (in module saltproc.tests.test_app)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="src/saltproc.tests.test_simulation.html#saltproc.tests.test_simulation.test_read_k_eds_delta">test_read_k_eds_delta() (in module saltproc.tests.test_simulation)</a>
+</li>
+      <li><a href="src/saltproc.tests.test_app.html#saltproc.tests.test_app.test_read_main_input">test_read_main_input() (in module saltproc.tests.test_app)</a>
+</li>
+      <li><a href="src/saltproc.tests.test_app.html#saltproc.tests.test_app.test_read_processes_from_input">test_read_processes_from_input() (in module saltproc.tests.test_app)</a>
+</li>
+      <li><a href="src/saltproc.tests.test_app.html#saltproc.tests.test_app.test_refill">test_refill() (in module saltproc.tests.test_app)</a>
+</li>
+      <li><a href="src/saltproc.tests.test_process.html#saltproc.tests.test_process.test_rem_elements">test_rem_elements() (in module saltproc.tests.test_process)</a>
+</li>
+      <li><a href="src/saltproc.tests.test_depcode.html#saltproc.tests.test_depcode.test_replace_burnup_parameters">test_replace_burnup_parameters() (in module saltproc.tests.test_depcode)</a>
+</li>
+      <li><a href="src/saltproc.tests.test_app.html#saltproc.tests.test_app.test_reprocessing">test_reprocessing() (in module saltproc.tests.test_app)</a>
+</li>
+      <li><a href="src/saltproc.tests.test_materialflow.html#saltproc.tests.test_materialflow.test_scale_matflow">test_scale_matflow() (in module saltproc.tests.test_materialflow)</a>
+</li>
       <li><a href="src/saltproc.tests.test_depcode.html#saltproc.tests.test_depcode.test_sss_meta_zzz">test_sss_meta_zzz() (in module saltproc.tests.test_depcode)</a>
+</li>
+      <li><a href="src/saltproc.tests.test_simulation.html#saltproc.tests.test_simulation.test_switch_to_next_geometry">test_switch_to_next_geometry() (in module saltproc.tests.test_simulation)</a>
+</li>
+      <li><a href="src/saltproc.tests.test_depcode.html#saltproc.tests.test_depcode.test_write_depcode_input">test_write_depcode_input() (in module saltproc.tests.test_depcode)</a>
 </li>
       <li><a href="src/saltproc.tests.test_depcode.html#saltproc.tests.test_depcode.test_write_mat_file">test_write_mat_file() (in module saltproc.tests.test_depcode)</a>
 </li>
