Source code button added

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -146,14 +146,19 @@
             
   <h1>All modules for which code is available</h1>
 <ul><li><a href="_weakrefset.html">_weakrefset</a></li>
+<li><a href="collections/abc.html">collections.abc</a></li>
+<li><a href="pyne/material.html">pyne.material</a></li>
 <li><a href="saltproc/app.html">saltproc.app</a></li>
 <li><a href="saltproc/depcode.html">saltproc.depcode</a></li>
 <li><a href="saltproc/materialflow.html">saltproc.materialflow</a></li>
 <li><a href="saltproc/process.html">saltproc.process</a></li>
 <li><a href="saltproc/reactor.html">saltproc.reactor</a></li>
 <li><a href="saltproc/simulation.html">saltproc.simulation</a></li>
+<li><a href="saltproc/tests/test_app.html">saltproc.tests.test_app</a></li>
 <li><a href="saltproc/tests/test_depcode.html">saltproc.tests.test_depcode</a></li>
+<li><a href="saltproc/tests/test_materialflow.html">saltproc.tests.test_materialflow</a></li>
 <li><a href="saltproc/tests/test_process.html">saltproc.tests.test_process</a></li>
+<li><a href="saltproc/tests/test_simulation.html">saltproc.tests.test_simulation</a></li>
 </ul>
 
            </div>
