Installation page updated

--- a/_modules/saltproc/app.html
+++ b/_modules/saltproc/app.html
@@ -186,8 +186,9 @@
             <span class="n">os</span><span class="o">.</span><span class="n">remove</span><span class="p">(</span><span class="n">db_file</span><span class="p">)</span>
             <span class="n">os</span><span class="o">.</span><span class="n">remove</span><span class="p">(</span><span class="n">iter_matfile</span><span class="p">)</span>
             <span class="n">os</span><span class="o">.</span><span class="n">remove</span><span class="p">(</span><span class="n">input_file</span><span class="p">)</span>
+            <span class="nb">print</span><span class="p">(</span><span class="s2">&quot;Previous run output files were deleted.&quot;</span><span class="p">)</span>
         <span class="k">except</span> <span class="ne">OSError</span> <span class="k">as</span> <span class="n">e</span><span class="p">:</span>
-            <span class="nb">print</span><span class="p">(</span><span class="s2">&quot;Error while deleting file: &quot;</span><span class="p">,</span> <span class="n">e</span><span class="p">)</span></div>
+            <span class="k">pass</span></div>
 
 
 <div class="viewcode-block" id="parse_arguments"><a class="viewcode-back" href="../../src/saltproc.app.html#saltproc.app.parse_arguments">[docs]</a><span class="k">def</span> <span class="nf">parse_arguments</span><span class="p">():</span>
