--- a/_modules/saltproc/depcode.html
+++ b/_modules/saltproc/depcode.html
@@ -276,6 +276,11 @@
                       <span class="s1">&#39; as first &lt;include&gt; statement</span><span class="se">\n</span><span class="s1">&#39;</span>
                       <span class="o">%</span> <span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">template_fname</span><span class="p">))</span>
                 <span class="k">return</span>
+        <span class="c1"># Create data directory</span>
+        <span class="k">try</span><span class="p">:</span>
+            <span class="n">os</span><span class="o">.</span><span class="n">mkdir</span><span class="p">(</span><span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">dirname</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">iter_matfile</span><span class="p">))</span>
+        <span class="k">except</span> <span class="ne">FileExistsError</span><span class="p">:</span>
+            <span class="k">pass</span>
         <span class="c1"># Create file with path for SaltProc rewritable iterative material file</span>
         <span class="n">shutil</span><span class="o">.</span><span class="n">copy2</span><span class="p">(</span><span class="n">abs_src_matfile</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">iter_matfile</span><span class="p">)</span>
         <span class="k">return</span> <span class="p">[</span><span class="n">s</span><span class="o">.</span><span class="n">replace</span><span class="p">(</span><span class="n">src_file</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">iter_matfile</span><span class="p">)</span> <span class="k">for</span> <span class="n">s</span> <span class="ow">in</span> <span class="n">data</span><span class="p">]</span></div>
