--- a/genindex.html
+++ b/genindex.html
@@ -236,6 +236,8 @@
 </li>
       <li><a href="src/saltproc.app.html#saltproc.app.check_restart">check_restart() (in module saltproc.app)</a>
 </li>
+      <li><a href="src/saltproc.simulation.html#saltproc.simulation.Simulation.check_switch_geo_trigger">check_switch_geo_trigger() (saltproc.simulation.Simulation method)</a>
+</li>
       <li><a href="src/saltproc.materialflow.html#saltproc.materialflow.Materialflow.clear">clear() (saltproc.materialflow.Materialflow method)</a>
 </li>
   </ul></td>
