--- a/genindex.html
+++ b/genindex.html
@@ -167,6 +167,7 @@
  | <a href="#G"><strong>G</strong></a>
  | <a href="#H"><strong>H</strong></a>
  | <a href="#I"><strong>I</strong></a>
+ | <a href="#K"><strong>K</strong></a>
  | <a href="#L"><strong>L</strong></a>
  | <a href="#M"><strong>M</strong></a>
  | <a href="#P"><strong>P</strong></a>
@@ -175,7 +176,6 @@
  | <a href="#S"><strong>S</strong></a>
  | <a href="#T"><strong>T</strong></a>
  | <a href="#W"><strong>W</strong></a>
- | <a href="#X"><strong>X</strong></a>
  
 </div>
 <h2 id="_">_</h2>
@@ -249,7 +249,13 @@
 <h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="src/saltproc.sparger.html#saltproc.sparger.Sparger.db">db (saltproc.sparger.Sparger attribute)</a>
+      <li><a href="src/saltproc.separator.html#saltproc.separator.Separator.db">db (saltproc.separator.Separator attribute)</a>
+
+      <ul>
+        <li><a href="src/saltproc.sparger.html#saltproc.sparger.Sparger.db">(saltproc.sparger.Sparger attribute)</a>
+</li>
+      </ul></li>
+      <li><a href="src/saltproc.separator.html#saltproc.separator.Separator.deltap">deltap (saltproc.separator.Separator attribute)</a>
 </li>
       <li><a href="src/saltproc.depcode.html#saltproc.depcode.Depcode">Depcode (class in saltproc.depcode)</a>
 </li>
@@ -263,8 +269,14 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="src/saltproc.sparger.html#id2">diffusivity (saltproc.sparger.Sparger attribute)</a>, <a href="src/saltproc.sparger.html#saltproc.sparger.Sparger.diffusivity">[1]</a>
 </li>
-      <li><a href="src/saltproc.sparger.html#saltproc.sparger.Sparger.ds">ds (saltproc.sparger.Sparger attribute)</a>
+      <li><a href="src/saltproc.separator.html#saltproc.separator.Separator.do">do (saltproc.separator.Separator attribute)</a>
 </li>
+      <li><a href="src/saltproc.separator.html#saltproc.separator.Separator.dp">dp (saltproc.separator.Separator attribute)</a>
+
+      <ul>
+        <li><a href="src/saltproc.sparger.html#saltproc.sparger.Sparger.dp">(saltproc.sparger.Sparger attribute)</a>
+</li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
@@ -314,6 +326,14 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="src/saltproc.depcode.html#saltproc.depcode.Depcode.insert_path_to_geometry">insert_path_to_geometry() (saltproc.depcode.Depcode method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="K">K</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="src/saltproc.separator.html#id3">k (saltproc.separator.Separator attribute)</a>, <a href="src/saltproc.separator.html#saltproc.separator.Separator.k">[1]</a>
 </li>
   </ul></td>
 </tr></table>
@@ -380,8 +400,6 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="src/saltproc.app.html#saltproc.app.parse_arguments">parse_arguments() (in module saltproc.app)</a>
 </li>
-      <li><a href="src/saltproc.separator.html#saltproc.separator.Separator.pgamma">pgamma (saltproc.separator.Separator attribute)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="src/saltproc.materialflow.html#saltproc.materialflow.Materialflow.print_attr">print_attr() (saltproc.materialflow.Materialflow method)</a>
@@ -394,16 +412,20 @@
 <h2 id="Q">Q</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="src/saltproc.sparger.html#saltproc.sparger.Sparger.q_he">q_he (saltproc.sparger.Sparger attribute)</a>
+      <li><a href="src/saltproc.separator.html#saltproc.separator.Separator.q_he">q_he (saltproc.separator.Separator attribute)</a>
+
+      <ul>
+        <li><a href="src/saltproc.sparger.html#saltproc.sparger.Sparger.q_he">(saltproc.sparger.Sparger attribute)</a>
 </li>
-      <li><a href="src/saltproc.sparger.html#saltproc.sparger.Sparger.q_salt">q_salt (saltproc.sparger.Sparger attribute)</a>
-</li>
+      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="src/saltproc.separator.html#saltproc.separator.Separator.qe">qe (saltproc.separator.Separator attribute)</a>
+      <li><a href="src/saltproc.separator.html#saltproc.separator.Separator.q_salt">q_salt (saltproc.separator.Separator attribute)</a>
+
+      <ul>
+        <li><a href="src/saltproc.sparger.html#saltproc.sparger.Sparger.q_salt">(saltproc.sparger.Sparger attribute)</a>
 </li>
-      <li><a href="src/saltproc.separator.html#saltproc.separator.Separator.qg">qg (saltproc.separator.Separator attribute)</a>
-</li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
@@ -608,8 +630,12 @@
 <h2 id="T">T</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="src/saltproc.sparger.html#id9">temp_room (saltproc.sparger.Sparger attribute)</a>, <a href="src/saltproc.sparger.html#saltproc.sparger.Sparger.temp_room">[1]</a>
+      <li><a href="src/saltproc.separator.html#saltproc.separator.Separator.temp_room">temp_room (saltproc.separator.Separator attribute)</a>
+
+      <ul>
+        <li><a href="src/saltproc.sparger.html#id9">(saltproc.sparger.Sparger attribute)</a>, <a href="src/saltproc.sparger.html#saltproc.sparger.Sparger.temp_room">[1]</a>
 </li>
+      </ul></li>
       <li><a href="src/saltproc.sparger.html#saltproc.sparger.Sparger.temp_salt">temp_salt (saltproc.sparger.Sparger attribute)</a>
 </li>
       <li><a href="src/saltproc.tests.test_depcode.html#saltproc.tests.test_depcode.test_change_sim_par">test_change_sim_par() (in module saltproc.tests.test_depcode)</a>
@@ -681,14 +707,6 @@
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="src/saltproc.depcode.html#saltproc.depcode.Depcode.write_mat_file">write_mat_file() (saltproc.depcode.Depcode method)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="X">X</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="src/saltproc.separator.html#saltproc.separator.Separator.x">x (saltproc.separator.Separator attribute)</a>
 </li>
   </ul></td>
 </tr></table>
