--- a/overview.html
+++ b/overview.html
@@ -233,7 +233,8 @@ comprises <cite>Sparging System package</cite> that calculates removal efficienc
 various target isotopes (i.e., Xe, Kr, and H). To enable this feature, use
 the <cite>“self”</cite> command in the input file in the <cite>“efficiency”</cite> object names of
 Sparger and Separator components. Each component can be employed separately.
-An example is given below:</p>
+An example is given below. In the example, capacity and mass flow rate are in
+<cite>g/s</cite> unit while volume is in <cite>cm</cite><span class="math notranslate nohighlight">\(^3\)</span> unit.</p>
 <dl class="simple">
 <dt>“sparger”: { “capacity”: 9920000,</dt><dd><p>“efficiency”: “self”,
 “mass_flowrate”: 9920000,
