--- a/_modules/saltproc/sparger.html
+++ b/_modules/saltproc/sparger.html
@@ -183,16 +183,22 @@
 <span class="sd">            exponential constant from following reference</span>
 <span class="sd">    q_salt : float</span>
 <span class="sd">        volumetric salt flow rate (m^3/s)</span>
+<span class="sd">        Default: 0.1</span>
 <span class="sd">    q_he : float</span>
 <span class="sd">        volumetric helium flow rate (m^3/s)</span>
+<span class="sd">        Default: 0.005</span>
 <span class="sd">    length : float</span>
 <span class="sd">        sparger/contractor length (m)</span>
-<span class="sd">    ds : float</span>
+<span class="sd">        Default: 10</span>
+<span class="sd">    dp : float</span>
 <span class="sd">        sparger/contractor (pipe) diameter (m)</span>
+<span class="sd">        Default: 0.1</span>
 <span class="sd">    db : float</span>
 <span class="sd">        bubble diameter (m) for bubble generator/separator</span>
+<span class="sd">        Default: 0.001</span>
 <span class="sd">    temp_salt: float</span>
 <span class="sd">        salt temperature (K)</span>
+<span class="sd">        Default: 900</span>
 <span class="sd">    area : float</span>
 <span class="sd">        contactor cross-section (m^2)</span>
 
@@ -230,7 +236,7 @@
     <span class="n">exp_const</span> <span class="o">=</span> <span class="p">{</span><span class="s1">&#39;Xe&#39;</span><span class="p">:</span> <span class="mi">2300</span><span class="p">,</span> <span class="s1">&#39;Kr&#39;</span><span class="p">:</span> <span class="mi">1900</span><span class="p">,</span> <span class="s1">&#39;H&#39;</span><span class="p">:</span> <span class="mi">0</span><span class="p">}</span>
 
 <div class="viewcode-block" id="Sparger.__init__"><a class="viewcode-back" href="../../src/saltproc.sparger.html#saltproc.sparger.Sparger.__init__">[docs]</a>    <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">q_salt</span><span class="o">=</span><span class="mf">0.1</span><span class="p">,</span> <span class="n">q_he</span><span class="o">=</span><span class="mf">0.005</span><span class="p">,</span> <span class="n">length</span><span class="o">=</span><span class="mi">10</span><span class="p">,</span>
-                 <span class="n">ds</span><span class="o">=</span><span class="mf">0.1</span><span class="p">,</span> <span class="n">db</span><span class="o">=</span><span class="mf">0.001</span><span class="p">,</span> <span class="n">temp_salt</span><span class="o">=</span><span class="mi">900</span><span class="p">,</span> <span class="n">corr</span><span class="o">=</span><span class="s1">&#39;Jiaqi&#39;</span><span class="p">,</span>
+                 <span class="n">dp</span><span class="o">=</span><span class="mf">0.1</span><span class="p">,</span> <span class="n">db</span><span class="o">=</span><span class="mf">0.001</span><span class="p">,</span> <span class="n">temp_salt</span><span class="o">=</span><span class="mi">900</span><span class="p">,</span> <span class="n">corr</span><span class="o">=</span><span class="s1">&#39;Jiaqi&#39;</span><span class="p">,</span>
                  <span class="o">*</span><span class="n">initial_data</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot; Initializes the Sparger object.</span>
 
@@ -238,16 +244,22 @@
 <span class="sd">        ----------</span>
 <span class="sd">        q_salt : float</span>
 <span class="sd">            volumetric salt flow rate (m^3/s)</span>
+<span class="sd">            Default: 0.1</span>
 <span class="sd">        q_he : float</span>
 <span class="sd">            volumetric helium flow rate (m^3/s)</span>
+<span class="sd">            Default: 0.005</span>
 <span class="sd">        length : float</span>
 <span class="sd">            sparger/contractor length (m)</span>
-<span class="sd">        ds : float</span>
+<span class="sd">            Default: 10</span>
+<span class="sd">        dp : float</span>
 <span class="sd">            sparger/contractor (pipe) diameter (m)</span>
+<span class="sd">            Default: 0.1</span>
 <span class="sd">        db : float</span>
 <span class="sd">            bubble diameter (m) for bubble generator/separator</span>
+<span class="sd">            Default: 0.001</span>
 <span class="sd">        temp_salt: float</span>
 <span class="sd">            salt temperature (K)</span>
+<span class="sd">            Default: 900</span>
 <span class="sd">        area : float</span>
 <span class="sd">            contactor cross-section (m^2)</span>
 <span class="sd">        corr: string</span>
@@ -264,10 +276,10 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">q_salt</span> <span class="o">=</span> <span class="n">q_salt</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">q_he</span> <span class="o">=</span> <span class="n">q_he</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">length</span> <span class="o">=</span> <span class="n">length</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">ds</span> <span class="o">=</span> <span class="n">ds</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">dp</span> <span class="o">=</span> <span class="n">dp</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">db</span> <span class="o">=</span> <span class="n">db</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">temp_salt</span> <span class="o">=</span> <span class="n">temp_salt</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">area</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">pi</span> <span class="o">*</span> <span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">ds</span> <span class="o">/</span> <span class="mi">2</span><span class="p">)</span> <span class="o">**</span> <span class="mi">2</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">area</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">pi</span> <span class="o">*</span> <span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">dp</span> <span class="o">/</span> <span class="mi">2</span><span class="p">)</span> <span class="o">**</span> <span class="mi">2</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">corr</span> <span class="o">=</span> <span class="n">corr</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">efficiency</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">eff</span><span class="p">()</span></div>
 
@@ -286,9 +298,9 @@
 <span class="sd">            Extraction efficiency for el_name element.</span>
 
 <span class="sd">        &quot;&quot;&quot;</span>
-        <span class="n">efficiency</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">eff</span><span class="p">()[</span><span class="n">el_name</span><span class="p">]</span>
+        <span class="n">isotope</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">eff</span><span class="p">()[</span><span class="n">el_name</span><span class="p">]</span>
 
-        <span class="k">return</span> <span class="n">efficiency</span></div>
+        <span class="k">return</span> <span class="n">isotope</span></div>
 
 <div class="viewcode-block" id="Sparger.description"><a class="viewcode-back" href="../../src/saltproc.sparger.html#saltproc.sparger.Sparger.description">[docs]</a>    <span class="k">def</span> <span class="nf">description</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Class attributes&#39; descriptions for plotting purpose in sensitivity</span>
@@ -299,17 +311,23 @@
 <span class="sd">            contains instances&#39; information</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="n">plt_dict</span> <span class="o">=</span> <span class="p">{</span><span class="s1">&#39;q_salt&#39;</span><span class="p">:</span> <span class="p">{</span><span class="s1">&#39;xaxis&#39;</span><span class="p">:</span> <span class="s1">&#39;salt flow rate ${(m^3/s)}$&#39;</span><span class="p">,</span>
-                               <span class="s1">&#39;fname&#39;</span><span class="p">:</span> <span class="s1">&#39;salt_flow_rate&#39;</span><span class="p">},</span>
+                               <span class="s1">&#39;yaxis&#39;</span><span class="p">:</span> <span class="s1">&#39;removal efficiency (%)&#39;</span><span class="p">,</span>
+                               <span class="s1">&#39;vs&#39;</span><span class="p">:</span> <span class="s1">&#39;sep_eff&#39;</span><span class="p">},</span>
                     <span class="s1">&#39;q_he&#39;</span><span class="p">:</span> <span class="p">{</span><span class="s1">&#39;xaxis&#39;</span><span class="p">:</span> <span class="s1">&#39;helium flow rate ${(m^3/s)}$&#39;</span><span class="p">,</span>
-                             <span class="s1">&#39;fname&#39;</span><span class="p">:</span> <span class="s1">&#39;helium_flow_rate&#39;</span><span class="p">},</span>
+                             <span class="s1">&#39;yaxis&#39;</span><span class="p">:</span> <span class="s1">&#39;removal efficiency (%)&#39;</span><span class="p">,</span>
+                             <span class="s1">&#39;vs&#39;</span><span class="p">:</span> <span class="s1">&#39;sep_eff&#39;</span><span class="p">},</span>
                     <span class="s1">&#39;length&#39;</span><span class="p">:</span> <span class="p">{</span><span class="s1">&#39;xaxis&#39;</span><span class="p">:</span> <span class="s1">&#39;sparger pipe length ${(m)}$&#39;</span><span class="p">,</span>
-                               <span class="s1">&#39;fname&#39;</span><span class="p">:</span> <span class="s1">&#39;sparger_pipe_length&#39;</span><span class="p">},</span>
-                    <span class="s1">&#39;ds&#39;</span><span class="p">:</span> <span class="p">{</span><span class="s1">&#39;xaxis&#39;</span><span class="p">:</span> <span class="s1">&#39;sparger pipe diameter ${(m)}$&#39;</span><span class="p">,</span>
-                           <span class="s1">&#39;fname&#39;</span><span class="p">:</span> <span class="s1">&#39;sparger_pipe_diameter&#39;</span><span class="p">},</span>
+                               <span class="s1">&#39;yaxis&#39;</span><span class="p">:</span> <span class="s1">&#39;removal efficiency (%)&#39;</span><span class="p">,</span>
+                               <span class="s1">&#39;vs&#39;</span><span class="p">:</span> <span class="s1">&#39;sep_eff&#39;</span><span class="p">},</span>
+                    <span class="s1">&#39;dp&#39;</span><span class="p">:</span> <span class="p">{</span><span class="s1">&#39;xaxis&#39;</span><span class="p">:</span> <span class="s1">&#39;sparger pipe diameter ${(m)}$&#39;</span><span class="p">,</span>
+                           <span class="s1">&#39;yaxis&#39;</span><span class="p">:</span> <span class="s1">&#39;removal efficiency (%)&#39;</span><span class="p">,</span>
+                           <span class="s1">&#39;vs&#39;</span><span class="p">:</span> <span class="s1">&#39;sep_eff&#39;</span><span class="p">},</span>
                     <span class="s1">&#39;db&#39;</span><span class="p">:</span> <span class="p">{</span><span class="s1">&#39;xaxis&#39;</span><span class="p">:</span> <span class="s1">&#39;bubble diameter ${(m)}$&#39;</span><span class="p">,</span>
-                           <span class="s1">&#39;fname&#39;</span><span class="p">:</span> <span class="s1">&#39;bubble_diameter&#39;</span><span class="p">},</span>
+                           <span class="s1">&#39;yaxis&#39;</span><span class="p">:</span> <span class="s1">&#39;removal efficiency (%)&#39;</span><span class="p">,</span>
+                           <span class="s1">&#39;vs&#39;</span><span class="p">:</span> <span class="s1">&#39;sep_eff&#39;</span><span class="p">},</span>
                     <span class="s1">&#39;temp_salt&#39;</span><span class="p">:</span> <span class="p">{</span><span class="s1">&#39;xaxis&#39;</span><span class="p">:</span> <span class="s1">&#39;average salt temperature ${(K)}$&#39;</span><span class="p">,</span>
-                                  <span class="s1">&#39;fname&#39;</span><span class="p">:</span> <span class="s1">&#39;average_salt_temperature&#39;</span><span class="p">}</span>
+                                  <span class="s1">&#39;yaxis&#39;</span><span class="p">:</span> <span class="s1">&#39;removal efficiency (%)&#39;</span><span class="p">,</span>
+                                  <span class="s1">&#39;vs&#39;</span><span class="p">:</span> <span class="s1">&#39;sep_eff&#39;</span><span class="p">}</span>
                     <span class="p">}</span>
 
         <span class="k">return</span> <span class="n">plt_dict</span></div>
@@ -372,14 +390,18 @@
         <span class="n">rho</span> <span class="o">=</span> <span class="p">(</span><span class="mf">6.105</span> <span class="o">-</span> <span class="mf">0.001272</span> <span class="o">*</span> <span class="bp">self</span><span class="o">.</span><span class="n">temp_salt</span><span class="p">)</span> <span class="o">*</span> <span class="mi">1000</span>
         <span class="n">nu</span> <span class="o">=</span> <span class="n">mu</span> <span class="o">/</span> <span class="n">rho</span>
         <span class="n">vl</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">q_salt</span> <span class="o">/</span> <span class="bp">self</span><span class="o">.</span><span class="n">area</span>
-        <span class="n">number_re</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">ds</span> <span class="o">*</span> <span class="n">vl</span> <span class="o">/</span> <span class="n">nu</span>
+        <span class="n">number_re</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">dp</span> <span class="o">*</span> <span class="n">vl</span> <span class="o">/</span> <span class="n">nu</span>
         <span class="n">number_sc</span> <span class="o">=</span> <span class="n">nu</span> <span class="o">/</span> <span class="bp">self</span><span class="o">.</span><span class="n">diffusivity</span>
         <span class="n">number_sh</span> <span class="o">=</span> <span class="nb">eval</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">sherwood</span><span class="p">()[</span><span class="bp">self</span><span class="o">.</span><span class="n">corr</span><span class="p">],</span>
                          <span class="p">{</span><span class="s1">&#39;number_sc&#39;</span><span class="p">:</span> <span class="n">number_sc</span><span class="p">,</span> <span class="s1">&#39;number_re&#39;</span><span class="p">:</span> <span class="n">number_re</span><span class="p">})</span>
-        <span class="n">kl</span> <span class="o">=</span> <span class="n">number_sh</span> <span class="o">*</span> <span class="bp">self</span><span class="o">.</span><span class="n">diffusivity</span> <span class="o">/</span> <span class="bp">self</span><span class="o">.</span><span class="n">ds</span>
+        <span class="n">kl</span> <span class="o">=</span> <span class="n">number_sh</span> <span class="o">*</span> <span class="bp">self</span><span class="o">.</span><span class="n">diffusivity</span> <span class="o">/</span> <span class="bp">self</span><span class="o">.</span><span class="n">dp</span>
         <span class="n">rem_eff</span> <span class="o">=</span> <span class="p">{</span><span class="n">key</span><span class="p">:</span> <span class="bp">self</span><span class="o">.</span><span class="n">eps</span><span class="p">(</span><span class="n">hh</span><span class="p">[</span><span class="n">key</span><span class="p">],</span> <span class="n">kl</span><span class="p">)</span> <span class="k">for</span> <span class="n">key</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">h_const</span><span class="p">}</span>
 
         <span class="k">return</span> <span class="n">rem_eff</span></div></div>
+
+
+<span class="k">if</span> <span class="vm">__name__</span> <span class="o">==</span> <span class="s1">&#39;__main__&#39;</span><span class="p">:</span>
+    <span class="nb">print</span><span class="p">(</span><span class="n">Sparger</span><span class="p">()</span><span class="o">.</span><span class="n">eff</span><span class="p">())</span>
 </pre></div>
 
            </div>
